# libftp

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
app/cmdline/: CMakeLists.txt  README.md
app/cmdline/src/: cmdline_exception.hpp  cmdline_interface.cpp  cmdline_interface.hpp  command.hpp  command_handler.cpp  command_handler.hpp  command_parser.cpp  command_parser.hpp  main.cpp  transfer_callback.cpp  transfer_callback.hpp  utils.cpp  utils.hpp
app/cmdline/test/: CMakeLists.txt  parser.cpp  utils.cpp
cmake/: ftp-config.cmake.in
doc/: RFC3659.txt  RFC959.txt
example/: CMakeLists.txt  README.md  download_file.cpp  file_transfer_progress.cpp  ftps.cpp  get_file_list.cpp  get_file_size.cpp  logger.cpp  reply_handlers.cpp  reply_handlers.hpp  upload_file.cpp
include/ftp/: client.hpp  datetime.hpp  file_list_reply.hpp  file_modified_time_reply.hpp  file_size_reply.hpp  ftp.hpp  ftp_exception.hpp  observer.hpp  replies.hpp  reply.hpp  ssl.hpp  ssl_context.hpp  transfer_callback.hpp  transfer_mode.hpp  transfer_type.hpp
include/ftp/detail/: ascii_istream.hpp  ascii_ostream.hpp  binary_istream.hpp  binary_ostream.hpp  boost_utils.hpp  control_connection.hpp  data_connection.hpp  export_internal.hpp  net_context.hpp  net_utils.hpp  socket.hpp  socket_base.hpp  socket_factory.hpp  socket_interface.hpp  ssl_socket.hpp  utils.hpp
include/ftp/stream/: input_stream.hpp  istream_adapter.hpp  ostream_adapter.hpp  output_stream.hpp
src/: ascii_istream.cpp  ascii_ostream.cpp  binary_istream.cpp  binary_ostream.cpp  boost_utils.cpp  client.cpp  control_connection.cpp  data_connection.cpp  file_list_reply.cpp  file_modified_time_reply.cpp  file_size_reply.cpp  istream_adapter.cpp  net_context.cpp  net_utils.cpp  ostream_adapter.cpp  replies.cpp  reply.cpp  socket.cpp  socket_factory.cpp  ssl.cpp  ssl_socket.cpp  utils.cpp
test/: CMakeLists.txt  ascii_istream.cpp  ascii_ostream.cpp  client.cpp  file_list_reply.cpp  file_modified_time_reply.cpp  file_size_reply.cpp  net_utils.cpp  replies.cpp  reply.cpp  test_helpers.cpp  test_helpers.hpp  test_server.hpp  test_utils.cpp  test_utils.hpp  utils.cpp
test/server/: server.py
test/server/certs/: ca_cert.key  ca_cert.pem  root_ca_cert.key  root_ca_cert.pem  server_cert.key  server_cert.pem
tool/unix/: build.sh  clean.sh
tool/windows/: build.ps1  clean.ps1
